--- a/resources/sass/settings.scss
+++ b/resources/sass/settings.scss
@@ -99,6 +99,20 @@
     }
   }
 
+  .tags-list {
+    h3.with-actions {
+      padding-bottom: 13px;
+    }
+
+    .table-cell.actions {
+      @if $htmldir == ltr {
+        text-align: right;
+      } @else {
+        text-align: left;
+      }
+    }
+  }
+
   .blank-screen {
     text-align: center;
 
