--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,30 +1,11 @@
-@import 'charts.css' layer(base);
-@import 'ant-design-vue/dist/reset.css' layer(base);
-
 @import 'tailwindcss';
+@import 'charts.css/dist/charts.css' layer(base);
+@plugin '@tailwindcss/forms';
 
-@config '../../tailwind.config.js';
+@custom-variant dark (&:where(.dark, .dark *));
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-}
-
-body {
-  color: #343a4b;
+@theme {
+  --default-font-family: Nunito, var(--font-sans);
 }
 
 .icon-breadcrumb {
